<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tallerclase.Principal">

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="502dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empresazxy"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="67dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="181dp"
                    android:layout_height="29dp"
                    android:layout_weight="0.93"
                    android:text="@string/genero"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/cmbGenero"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="183dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.82"
                    android:text="@string/tipoZapato"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/cmbZapato"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="182dp"
                    android:layout_height="27dp"
                    android:layout_weight="1.05"
                    android:text="@string/marca"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/cmbMarca"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <EditText
                    android:id="@+id/txtCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cantidad"
                    android:inputType="number"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.18"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnBorrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="borrar"
                        android:text="@string/cancelar" />

                    <Button
                        android:id="@+id/btnEvaluar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="calcular"
                        android:text="@string/evaluar" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetallesCompra"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.43"
                        android:text="@string/valorUnitario"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtUnitario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.64"
                        android:text="@string/valorTotal"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.13"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
